--- a/backend/amoz/src/main/resources/application.properties
+++ b/backend/amoz/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=amoz
-#spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
-#spring.flyway.url=jdbc:mysql://localhost:3306/mydatabase
+spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
+spring.flyway.url=jdbc:mysql://localhost:3306/mydatabase
 
 #gdy rozruch z docker-compose:
-spring.datasource.url=jdbc:mysql://database:3306/mydatabase
-spring.flyway.url=jdbc:mysql://database:3306/mydatabase
+#spring.datasource.url=jdbc:mysql://database:3306/mydatabase
+#spring.flyway.url=jdbc:mysql://database:3306/mydatabase
 
 #gdy rozruch z azure:
 #spring.datasource.url=jdbc:mysql://amoz-bqhchnarb8gfg0fq.westeurope-01.azurewebsites.net:3306/mydatabase?useSSL=false
