--- a/backend/amoz/pom.xml
+++ b/backend/amoz/pom.xml
@@ -113,6 +113,12 @@
             <artifactId>azure-communication-email</artifactId>
             <version>1.1.0-beta.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-storage-blob</artifactId>
+            <version>12.28.1</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
