feat(backend): add attribute and product variant controllers

--- a/backend/amoz/src/main/resources/application.properties
+++ b/backend/amoz/src/main/resources/application.properties
@@ -24,6 +24,9 @@ spring.flyway.password=mypassword
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baselineOnMigrate=true
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 spring.security.oauth2.resourceserver.opaque-token.introspection-uri=https://www.googleapis.com/
 spring.security.oauth2.resource-server.opaque-token.client-id=51440805312-7aq0a0kn9iqs21raedh7i6ihppbs63nu.apps.googleusercontent.com
 spring.security.oauth2.resource-server.opaque-token.client-secret=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
