feat(backend): add authorization for all endpoints and documentation for all controllers, DTOs, requests and responses

--- a/backend/amoz/src/main/resources/application.properties
+++ b/backend/amoz/src/main/resources/application.properties
@@ -38,3 +38,4 @@ azure.storage.connection-string=DefaultEndpointsProtocol=https;AccountName=amoz;
 azure.storage.container-name=amoz-storage
 
 amoz.fileservice.max-size-px=512
+amoz.fileservice.compression-quality=0.9f
