--- a/backend/amoz/src/main/resources/application.properties
+++ b/backend/amoz/src/main/resources/application.properties
@@ -1,18 +1,22 @@
 spring.application.name=amoz
-spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
-spring.flyway.url=jdbc:mysql://localhost:3306/mydatabase
+#spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
+#spring.flyway.url=jdbc:mysql://localhost:3306/mydatabase
 
 #gdy rozruch z docker-compose:
-#spring.datasource.url=jdbc:mysql://database:3306/mydatabase
-#spring.flyway.url=jdbc:mysql://database:3306/mydatabase
+#spring.datasource.url=jdbc:mysql://database:3306/mydatabase?useSSL=false&allowPublicKeyRetrieval=true
+#spring.flyway.url=jdbc:mysql://database:3306/mydatabase?useSSL=false&allowPublicKeyRetrieval=true
 
 #gdy rozruch z azure:
 #spring.datasource.url=jdbc:mysql://amoz-bqhchnarb8gfg0fq.westeurope-01.azurewebsites.net:3306/mydatabase?useSSL=false
 #spring.flyway.url=jdbc:mysql://amoz-bqhchnarb8gfg0fq.westeurope-01.azurewebsites.net:3306/mydatabase?useSSL=false
 
-spring.datasource.username=myuser
-spring.datasource.password=mypassword
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:sqlserver://amoz-server.database.windows.net:1433;DatabaseName=amoz-database;encrypt=true;trustServerCertificate=false;loginTimeout=30;
+spring.flyway.url=jdbc:sqlserver://amoz-server.database.windows.net:1433;DatabaseName=amoz-database;encrypt=true;trustServerCertificate=false;loginTimeout=30;
+
+spring.datasource.username=AMOZ_SA
+spring.datasource.password=P@ssw0rd
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.sql.init.mode=never
 spring.sql.init.continue-on-error=true
