--- a/frontend/gradle/libs.versions.toml
+++ b/frontend/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.6.0
+agp = "8.6.0"
 coilCompose = "2.3.0"
 converterKotlinxSerialization = "2.11.0"
 datastorePreferences = "1.1.1"
