--- a/backend/amoz/src/main/resources/application.properties
+++ b/backend/amoz/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.application.name=amoz
 #spring.datasource.url=jdbc:mysql://amoz-bqhchnarb8gfg0fq.westeurope-01.azurewebsites.net:3306/mydatabase?useSSL=false
 #spring.flyway.url=jdbc:mysql://amoz-bqhchnarb8gfg0fq.westeurope-01.azurewebsites.net:3306/mydatabase?useSSL=false
 
-spring.datasource.url=jdbc:sqlserver://amoz-server.database.windows.net:1433;DatabaseName=amoz-database;encrypt=true;trustServerCertificate=false;loginTimeout=30;
-spring.flyway.url=jdbc:sqlserver://amoz-server.database.windows.net:1433;DatabaseName=amoz-database;encrypt=true;trustServerCertificate=false;loginTimeout=30;
+spring.datasource.url=jdbc:sqlserver://amoz-server.database.windows.net:1433;DatabaseName=amoz-database;encrypt=true;trustServerCertificate=false;loginTimeout=30;sendStringParametersAsUnicode=false;
+spring.flyway.url=jdbc:sqlserver://amoz-server.database.windows.net:1433;DatabaseName=amoz-database;encrypt=true;trustServerCertificate=false;loginTimeout=30;sendStringParametersAsUnicode=false;
 
 spring.datasource.username=AMOZ_SA
 spring.datasource.password=P@ssw0rd
