(tests)category view model tested, images to products added

--- a/frontend/app/src/main/AndroidManifest.xml
+++ b/frontend/app/src/main/AndroidManifest.xml
@@ -20,13 +20,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Bussiness"
+        android:theme="@style/Theme.AmozApplicationTheme"
         tools:targetApi="tiramisu">
         <activity
             android:name=".app.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Bussiness">
+            android:theme="@style/Theme.AmozApplicationTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
